@@ -29,12 +29,10 @@ requires 'Tags::HTML::Messages' => 0.09;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Tags-HTML-ChangePassword/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Tags-HTML-ChangePassword';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Tags-HTML-ChangePassword';
-test_requires 'CSS::Struct::Output::Raw' => 0;
 test_requires 'CSS::Struct::Output::Structure' => 0;
 test_requires 'Data::Message::Simple' => 0;
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0;
-test_requires 'Tags::Output::Raw' => 0;
 test_requires 'Tags::Output::Structure' => 0;
 test_requires 'Test::MockObject' => 0;
 test_requires 'Test::More' => 0;
